align donation button and lang switcher vertically (fix #15658)

--- a/media/css/m24/components/footer-refresh.scss
+++ b/media/css/m24/components/footer-refresh.scss
@@ -331,7 +331,6 @@ $max-footer-content-width: $content-max;
 
 // language form
 .moz24-footer-language {
-    margin-top: $spacer-lg;
     margin-bottom: 0;
     position: relative;
 }
